--- a/manifest.json
+++ b/manifest.json
@@ -16,10 +16,7 @@
         "yunohost": ">= 2.4.0.5"
     },
     "multi_instance": false,
-    "services": [
-        "nginx",
-        "php5-fpm"
-    ],
+    "services": ["nginx", "php5-fpm"],
     "arguments": {
         "install" : [
             {
