--- a/manifest.json
+++ b/manifest.json
@@ -35,8 +35,8 @@
                 "name": "path",
                 "type": "path",
                 "ask": {
-                    "en": "Choose a path for PhpSysInfo",
-                    "fr": "Choisissez un chemin pour PhpSysInfo"
+                    "en": "Choose a path for Teamspeak3 web interface",
+                    "fr": "Choisissez un chemin pour l'interface web de Teamspeak3"
                 },
                 "example": "/teamspeak3web",
                 "default": "/teamspeak3web"
@@ -49,16 +49,6 @@
                 },
                 "choices": ["Yes", "No"],
                 "default": "No"
-            },
-			{
-                "name": "platform",
-                "ask": {
-					"en": "64 bit or 32 bit? (amd64 vs x86)",
-					"fr": "64 bit ou 32 bit? (amd64 ou x86)"
-				},
-                "choices": ["amd64", "x86"],
-				"example": "amd64",
-                "default": "amd64"
             }
         ]
     }
