--- a/conf/teamspeak.service
+++ b/conf/teamspeak.service
@@ -8,4 +8,4 @@ Description=Teamspeak3 Server
 
 [Service]
 User=teamspeak
-ExecStart=/home/teamspeak/ts3server_minimal_runscript.sh start inifile=ts3server.ini
+ExecStart=/home/teamspeak/ts3server_minimal_runscript.sh start inifile=teamspeak.ini
