--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "TeamSpeak 3 Server",
-    "id": "teamspeak3",
+    "name": "TeamSpeak Server",
+    "id": "teamspeak",
     "packaging_format": 1,
     "description": {
         "en": "Cross-platform voice communication server.",
@@ -35,11 +35,11 @@
                 "name": "path",
                 "type": "path",
                 "ask": {
-                    "en": "Choose a path for Teamspeak3 web interface",
+                    "en": "Choose a path for Teamspeak web interface",
                     "fr": "Choisissez un chemin pour l'interface web de Teamspeak3"
                 },
-                "example": "/teamspeak3web",
-                "default": "/teamspeak3web"
+                "example": "/teamspeak_wi",
+                "default": "/teamspeak_wi"
             },
             {
                 "name": "is_public",
